--- a/documentation/modules.html
+++ b/documentation/modules.html
@@ -57,6 +57,21 @@
             <div class="col-sm-4">
                 <div class="card card-module">
                     <div class="card-header">
+                        <h4 class="card-title">AppRoutingModule</h4>
+                    </div>
+                    <div class="card-block">
+                                <p class="no-graph">
+                                    No graph available.
+                                </p>
+                        <footer class="text-center">
+                            <a href="./modules/AppRoutingModule.html" class="btn btn-default">Browse</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card card-module">
+                    <div class="card-header">
                         <h4 class="card-title">FeatureApiAuthModule</h4>
                     </div>
                     <div class="card-block">
@@ -174,6 +189,40 @@
             <div class="col-sm-4">
                 <div class="card card-module">
                     <div class="card-header">
+                        <h4 class="card-title">FeatureModulesAnimalsModule</h4>
+                    </div>
+                    <div class="card-block">
+                                <p>
+                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/FeatureModulesAnimalsModule/dependencies.svg" style="width: 100%; height: 175px;">
+                                        Your browser does not support SVG
+                                    </object>
+                                </p>
+                        <footer class="text-center">
+                            <a href="./modules/FeatureModulesAnimalsModule.html" class="btn btn-default">Browse</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card card-module">
+                    <div class="card-header">
+                        <h4 class="card-title">FeatureModulesDashboardModule</h4>
+                    </div>
+                    <div class="card-block">
+                                <p>
+                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/FeatureModulesDashboardModule/dependencies.svg" style="width: 100%; height: 175px;">
+                                        Your browser does not support SVG
+                                    </object>
+                                </p>
+                        <footer class="text-center">
+                            <a href="./modules/FeatureModulesDashboardModule.html" class="btn btn-default">Browse</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card card-module">
+                    <div class="card-header">
                         <h4 class="card-title">UiKitsMainModule</h4>
                     </div>
                     <div class="card-block">
@@ -223,7 +272,7 @@
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'modules';
-            var COMPODOC_CURRENT_PAGE_URL = 'modules.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
