--- a/documentation/modules/FeatureLazyAboutModule.html
+++ b/documentation/modules/FeatureLazyAboutModule.html
@@ -193,7 +193,7 @@ export class FeatureLazyAboutModule {}
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
-            var COMPODOC_CURRENT_PAGE_URL = 'FeatureLazyAboutModule.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
