--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -127,6 +127,30 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#firebaseConfig">apps/agromanager/src/environments/firebase.ts</a>
+            </td>
+            <td>variable</td>
+            <td>firebaseConfig</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#firebaseDEVConfig">apps/agromanager/src/environments/firebase.ts</a>
+            </td>
+            <td>variable</td>
+            <td>firebaseDEVConfig</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./interfaces/User.html">libs/data/src/lib/data.ts</a>
             </td>
             <td>interface</td>
@@ -148,16 +172,16 @@
                 <span class="coverage-count">(0/2)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/AuthService.html">libs/feature/api/auth/src/lib/auth.service.ts</a>
             </td>
             <td>injectable</td>
             <td>AuthService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(1/3)</span>
             </td>
         </tr>
         <tr class="low">
@@ -235,6 +259,42 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/AnimalsPageComponent.html">libs/feature/modules/animals/src/lib/animals-page/animals-page.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>AnimalsPageComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#featureModulesAnimalsRoutes">libs/feature/modules/animals/src/lib/feature-modules-animals.module.ts</a>
+            </td>
+            <td>variable</td>
+            <td>featureModulesAnimalsRoutes</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/DashboardPageComponent.html">libs/feature/modules/dashboard/src/lib/dashboard-page/dashboard-page.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>DashboardPageComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/FooterComponent.html">libs/ui-kits/main/src/lib/footer/footer.component.ts</a>
             </td>
             <td>component</td>
@@ -268,6 +328,18 @@
                 <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href=".//functions.html#Unnamed function">tools/schematics/additional-documentation/index.ts</a>
+            </td>
+            <td>function</td>
+            <td>Unnamed function</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
     </tbody>
 </table>
 
@@ -294,7 +366,7 @@
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'coverage';
-            var COMPODOC_CURRENT_PAGE_URL = 'coverage.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
