--- a/documentation/miscellaneous/variables.html
+++ b/documentation/miscellaneous/variables.html
@@ -64,6 +64,15 @@
                             <a href="#environment" title="apps/agromanager/src/environments/environment.ts"><b>environment</b>&nbsp;&nbsp;&nbsp;(apps/.../environment.ts)</a>
                         </li>
                         <li>
+                            <a href="#featureModulesAnimalsRoutes" title="libs/feature/modules/animals/src/lib/feature-modules-animals.module.ts"><b>featureModulesAnimalsRoutes</b>&nbsp;&nbsp;&nbsp;(libs/.../feature-modules-animals.module.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#firebaseConfig" title="apps/agromanager/src/environments/firebase.ts"><b>firebaseConfig</b>&nbsp;&nbsp;&nbsp;(apps/.../firebase.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#firebaseDEVConfig" title="apps/agromanager/src/environments/firebase.ts"><b>firebaseDEVConfig</b>&nbsp;&nbsp;&nbsp;(apps/.../firebase.ts)</a>
+                        </li>
+                        <li>
                             <a href="#getGreeting" title="apps/agromanager-e2e/src/support/app.po.ts"><b>getGreeting</b>&nbsp;&nbsp;&nbsp;(apps/.../app.po.ts)</a>
                         </li>
                     </ul>
@@ -129,6 +138,110 @@
                         <td class="col-md-4">
                             <i>Default value : </i><code>{
   production: false,
+}</code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+</section>
+    <h3>libs/feature/modules/animals/src/lib/feature-modules-animals.module.ts</h3>
+    <section>
+    <h3></h3>        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="featureModulesAnimalsRoutes"></a>
+                        <span class="name">
+                            <b>
+                            featureModulesAnimalsRoutes</b>
+                            <a href="#featureModulesAnimalsRoutes"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>    <code>Route[]</code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>[]</code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+</section>
+    <h3>apps/agromanager/src/environments/firebase.ts</h3>
+    <section>
+    <h3></h3>        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="firebaseConfig"></a>
+                        <span class="name">
+                            <b>
+                            firebaseConfig</b>
+                            <a href="#firebaseConfig"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/object" target="_blank" >object</a></code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>{
+	apiKey: &#x27;AIzaSyBxUzZmK_lFTWOopRQhCZfZHLdH9cw3FqI&#x27;,
+	authDomain: &#x27;agromanager-285317.firebaseapp.com&#x27;,
+	databaseURL: &#x27;https://agromanager-285317.firebaseio.com&#x27;,
+	projectId: &#x27;agromanager-285317&#x27;,
+	storageBucket: &#x27;agromanager-285317.appspot.com&#x27;,
+	messagingSenderId: &#x27;966728077169&#x27;,
+	appId: &#x27;1:966728077169:web:b15914cb2030621aa0f0d0&#x27;,
+	measurementId: &#x27;G-979F8ZGK33&#x27;,
+}</code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="firebaseDEVConfig"></a>
+                        <span class="name">
+                            <b>
+                            firebaseDEVConfig</b>
+                            <a href="#firebaseDEVConfig"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/object" target="_blank" >object</a></code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>{
+	apiKey: &#x27;AIzaSyC5WaSk6cRpik6b0piqqImSAzmPm7qGAvM&#x27;,
+	authDomain: &#x27;agromanager-dev.firebaseapp.com&#x27;,
+	databaseURL: &#x27;https://agromanager-dev.firebaseio.com&#x27;,
+	projectId: &#x27;agromanager-dev&#x27;,
+	storageBucket: &#x27;agromanager-dev.appspot.com&#x27;,
+	messagingSenderId: &#x27;929859250169&#x27;,
+	appId: &#x27;1:929859250169:web:15184262293eac54d0ff28&#x27;,
 }</code>
                         </td>
                     </tr>
