--- a/documentation/modules/FeatureApiAuthModule.html
+++ b/documentation/modules/FeatureApiAuthModule.html
@@ -112,7 +112,7 @@ export class FeatureApiAuthModule {}
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
-            var COMPODOC_CURRENT_PAGE_URL = 'FeatureApiAuthModule.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
