--- a/documentation/modules/FeatureLazySettingsModule.html
+++ b/documentation/modules/FeatureLazySettingsModule.html
@@ -193,7 +193,7 @@ export class FeatureLazySettingsModule {}
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
-            var COMPODOC_CURRENT_PAGE_URL = 'FeatureLazySettingsModule.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
