--- a/documentation/modules/FeatureModulesDashboardModule.html
+++ b/documentation/modules/FeatureModulesDashboardModule.html
@@ -188,7 +188,7 @@ export class FeatureModulesDashboardModule {}
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
-            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'FeatureModulesDashboardModule.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
