--- a/documentation/modules/UiKitsMainModule.html
+++ b/documentation/modules/UiKitsMainModule.html
@@ -301,7 +301,7 @@ export class UiKitsMainModule {}
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
-            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'UiKitsMainModule.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
