--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -103,54 +103,6 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#environment">apps/agromanager/src/environments/environment.prod.ts</a>
-            </td>
-            <td>variable</td>
-            <td>environment</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#environment">apps/agromanager/src/environments/environment.ts</a>
-            </td>
-            <td>variable</td>
-            <td>environment</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#firebaseConfig">apps/agromanager/src/environments/firebase.ts</a>
-            </td>
-            <td>variable</td>
-            <td>firebaseConfig</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#firebaseDEVConfig">apps/agromanager/src/environments/firebase.ts</a>
-            </td>
-            <td>variable</td>
-            <td>firebaseDEVConfig</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
                 <a href="./interfaces/User.html">libs/data/src/lib/data.ts</a>
             </td>
             <td>interface</td>
@@ -366,7 +318,7 @@
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'coverage';
-            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'coverage.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
