--- a/documentation/modules.html
+++ b/documentation/modules.html
@@ -272,7 +272,7 @@
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'modules';
-            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'modules.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
