Finished Auth Service Added firebase-ui

--- a/documentation/modules/AppModule.html
+++ b/documentation/modules/AppModule.html
@@ -235,10 +235,7 @@ import {FlexLayoutModule} from &#x27;@angular/flex-layout&#x27;;
 
 import {UiKitsMainModule} from &#x27;@agromanager/ui-kits/main&#x27;;
 import {from} from &#x27;rxjs&#x27;;
-import {
-	FeatureModulesAnimalsModule,
-	featureModulesAnimalsRoutes,
-} from &#x27;@agromanager/feature/modules/animals&#x27;;
+import {FeatureModulesAnimalsModule} from &#x27;@agromanager/feature/modules/animals&#x27;;
 
 @NgModule({
 	declarations: [AppComponent],
