--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -223,18 +223,6 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#featureModulesAnimalsRoutes">libs/feature/modules/animals/src/lib/feature-modules-animals.module.ts</a>
-            </td>
-            <td>variable</td>
-            <td>featureModulesAnimalsRoutes</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
                 <a href="./components/DashboardPageComponent.html">libs/feature/modules/dashboard/src/lib/dashboard-page/dashboard-page.component.ts</a>
             </td>
             <td>component</td>
@@ -318,7 +306,7 @@
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'coverage';
-            var COMPODOC_CURRENT_PAGE_URL = 'coverage.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
