--- a/documentation/injectables/AuthService.html
+++ b/documentation/injectables/AuthService.html
@@ -108,7 +108,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">libs/feature/api/auth/src/lib/auth.service.ts:22</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">libs/feature/api/auth/src/lib/auth.service.ts:27</a></div>
                             </td>
                         </tr>
 
@@ -196,7 +196,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">libs/feature/api/auth/src/lib/auth.service.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">libs/feature/api/auth/src/lib/auth.service.ts:27</a></div>
                             </td>
                         </tr>
 
@@ -222,6 +222,7 @@ import {
 
 import {Observable, of} from &#x27;rxjs&#x27;;
 import {switchMap} from &#x27;rxjs/operators&#x27;;
+import { async } from &#x27;rxjs/internal/scheduler/async&#x27;;
 
 /**
  * Auth Service for firebase
@@ -230,6 +231,10 @@ import {switchMap} from &#x27;rxjs/operators&#x27;;
 	providedIn: &#x27;root&#x27;,
 })
 export class AuthService {
+
+	/**
+	 * @interface{User} from User in data lib
+	 */
 	user$: Observable&lt;User&gt;;
 
 	constructor(
@@ -237,7 +242,9 @@ export class AuthService {
 		private afstore: AngularFirestore,
 		private router: Router
 	) {
-		// Get the auth state, then fetch the Firestore user document or return null
+		/**
+		 *  Get the auth state, then fetch the Firestore user document or return null
+		 *  */
 		this.user$ &#x3D; this.afAuth.authState.pipe(
 			switchMap((user) &#x3D;&gt; {
 				// Logged in
@@ -249,6 +256,15 @@ export class AuthService {
 				}
 			})
 		);
+
+		
+			/**
+			 * Create the Signin Async Function that returns a promise
+			 */
+			async EmailSignin(email, password) {
+				const credential &#x3D; await this.afAuth.signInWithEmailAndPassword(email, password);
+				return this.updateUserData(credential.user);
+			}
 	}
 }
 </code></pre>
@@ -284,7 +300,7 @@ export class AuthService {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'injectable';
-            var COMPODOC_CURRENT_PAGE_URL = 'AuthService.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
