--- a/documentation/modules/FeatureModulesAnimalsModule.html
+++ b/documentation/modules/FeatureModulesAnimalsModule.html
@@ -144,13 +144,13 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NgModule} from &#x27;@angular/core&#x27;;
 import {CommonModule} from &#x27;@angular/common&#x27;;
-import {RouterModule, Route} from &#x27;@angular/router&#x27;;
-import { AnimalsPageComponent } from &#x27;./animals-page/animals-page.component&#x27;;
+// import {RouterModule, Route} from &#x27;@angular/router&#x27;;
+import {AnimalsPageComponent} from &#x27;./animals-page/animals-page.component&#x27;;
 
-export const featureModulesAnimalsRoutes: Route[] &#x3D; [];
+// export const featureModulesAnimalsRoutes: Route[] &#x3D; [];
 
 @NgModule({
-	imports: [CommonModule, RouterModule],
+	imports: [CommonModule],
 	declarations: [AnimalsPageComponent],
 })
 export class FeatureModulesAnimalsModule {}
