--- a/documentation/routes.html
+++ b/documentation/routes.html
@@ -75,7 +75,7 @@
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'routes';
-            var COMPODOC_CURRENT_PAGE_URL = 'routes.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
