--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -133,7 +133,7 @@
             <td>AuthService</td>
             <td align="right" data-sort="33">
                 <span class="coverage-percent">33 %</span>
-                <span class="coverage-count">(1/3)</span>
+                <span class="coverage-count">(2/6)</span>
             </td>
         </tr>
         <tr class="low">
@@ -306,7 +306,7 @@
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'coverage';
-            var COMPODOC_CURRENT_PAGE_URL = 'equipment.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'coverage.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
