--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -112,28 +112,28 @@
                 <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./guards/AuthGuard.html">libs/feature/api/auth/src/lib/auth.guard.ts</a>
             </td>
             <td>guard</td>
             <td>AuthGuard</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/2)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(3/3)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/AuthService.html">libs/feature/api/auth/src/lib/auth.service.ts</a>
             </td>
             <td>injectable</td>
             <td>AuthService</td>
-            <td align="right" data-sort="33">
-                <span class="coverage-percent">33 %</span>
-                <span class="coverage-count">(2/6)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(7/7)</span>
             </td>
         </tr>
         <tr class="low">
@@ -181,7 +181,7 @@
             <td>LoginPageComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -193,7 +193,7 @@
             <td>ProfilePageComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -253,7 +253,7 @@
             <td>HeaderComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="low">
